fixed anchor jumps2

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    padding-top: 60px;
+  }
+
 .headShot{
     border-radius: 50%;
     width: 100%;
@@ -15,10 +19,28 @@
     top: 0;
     z-index: 1;
 }
-
-#AboutMe{
-    padding: 0;
+.jumbotron-fluid{
+    margin-top: -0.17% !important;
 }
+.display-3{
+    margin-left: 5%;
+}
+
+.contact{
+    float: right;
+}
+.download{
+    float: left;
+}
+
+#aboutMe:target{
+    padding-top: 65px;
+}
+
+#grades:target{
+    padding-top: 65px;
+}
+
 
 .skills {
     overflow: hidden;
@@ -40,12 +62,11 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-  
   }
   .home {
     background-image: url("ScenicBay.png");
     min-height: 100%;
-    margin-top: 4.5%;
+    margin-top: 0;
   }
   
   .bgimg-2 {
